fix bug z-index

--- a/components/pages/home/Search/Search.module.scss
+++ b/components/pages/home/Search/Search.module.scss
@@ -31,7 +31,7 @@
       border-radius: 12px;
       padding: 12px 20px;
       position: relative;
-      z-index: 25;
+      z-index: 300;
       background-color: #fff;
     }
 
