--- a/components/widgets/Header/Header.module.scss
+++ b/components/widgets/Header/Header.module.scss
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 50;
+  z-index: 500;
   background-color: #fff;
   .header {
     display: flex;
